reuse translations: finish tutorials + misc

--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/45.tutorials/55.moving_app_folder.md
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/45.tutorials/55.moving_app_folder.md
@@ -1,32 +1,31 @@
 ---
 sidebar_label: Move apps storage
-title: Moving an app folder to a different storage
+title: Déplacer un dossier d'application vers un autre espace de stockage
 ---
 
-Applications folder are (*usually*) located in `/var/www/$appname`
+Les dossiers d'application se trouvent (*habituellement*) dans `/var/www/$nom_application`
 
-If an application folder is expected to get bigger because of the amount of data it contains, it might be relevant to move it to another storage (like an external hard drive).
+Lorsqu'un dossier d'application devient trop volumineux il peut être intéressant de le déplacer vers un autre espace de stockage (comme un disque dur externe, une carte sd, etc.)
 
-Here's a summary of how to do this the application wordpress. Here, is is assumed that
-[you already mounted the external hard-drive](/administer/tutorials/external_storage).
+Partant du principe que [le stockage externe est déjà monté](/administer/tutorials/external_storage), voici un guide pour déplacer le dossier de l'application wordpress :
 
-#### 1. Move the entire wordpress folder to an external hard drive
+#### 1. Déplacer le dossier wordpress et tout son contenu vers le stockage externe
 
 ```bash
 mv /var/www/wordpress /media/externalharddrive/
 ```
 
-#### 2. Create a symbolic link
+#### 2. Créer un lien symbolique
 
-So that programs looking for files in /var/www/wordpress will actually take them from the harddrive
+Le programme qui va chercher des informations dans le dossier /var/www/wordpress sera redirigé vers le stockage externe.
 
 ```bash
 ln -s /media/externalharddrive/wordpress /var/www/wordpress
 ```
 
-#### 3. Tweak permissions (maybe?)
+#### 3. (peut être) bidouiller les permissions
 
-After this, note that you may need to tweak the permissions of `/media/externalharddrive` so that `www-data` (or the user corresponding to the app) is able to read through the folder... Something like :
+Après tout ça, il est possible que vous ayez à modifier les permissions de `/media/externalharddrive` pour que `www-data` (ou l'utilisateur de l'app) puisse y accéder. Quelque chose comme :
 
 ```bash
 chgrp www-data /media/externalharddrive
