--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/45.tutorials/65.sftp_on_apps.md
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/45.tutorials/65.sftp_on_apps.md
@@ -1,15 +1,15 @@
 ---
-sidebar_label: Access apps via SFTP
-title: Give SFTP permission to edit an app
+sidebar_label: Accéder aux applications via SFTP
+title: Donner la permission SFTP d'éditer une application
 ---
 
-In YunoHost permission management web admin interface, you can specify which user can access your system through SFTP.
+Dans YunoHost, depuis la gestion des permissions par l'interface d'administration web, vous pouvez spécifier quel utilisateur peut accéder à votre système à travers SFTP.
 
-However, those user are chrooted in their home directory for security reasons.
+Cependant ces utilisateurs sont chrootés dans leur répertoire home pour des raisons de sécurité.
 
-If you want to give access to a specific apps through SFTP, here are additional steps to do after giving the SFTP permission in the web interface.
+Si vous désirez donner accès à une application spécifique à travers SFTP, voici les actions à faire après avoir donné les droits à l'utilisateur dans l'interface d'adminstration web.
 
-In instructions below, USER is the user to whom you wish to give permission to edit wordpress files.
+Dans les instructions suivantes USER est l'utilisateur à qui sont données les permissions d'éditer des fichiers wordpress.
 
 ```bash
 mkdir -p /home/USER/apps/wordpress
