--- a/i18n/it/docusaurus-plugin-content-docs/current/03.administer/45.tutorials/45.certificate_custom.md
+++ b/i18n/it/docusaurus-plugin-content-docs/current/03.administer/45.tutorials/45.certificate_custom.md
@@ -1,60 +1,60 @@
 ---
-title: Custom certificates
+title: Certificati personalizzati
 ---
 
 :::warning
-Since version 2.5, YunoHost integrates Let's Encrypt certificates automated management. You can easily and freely [install a Let's Encrypt certificate](/administer/admin_guide/domains/certificate). The following document describes the steps for installing a paid certificate from a certification authority (**Gandi**, **RapidSSL**, **StartSSL**, **Cacert**).
+Dalla versione 2.5 YunoHost integra la gestione automatizzata dei certificati Let's Encrypt. Potete quindi facilmente e gratuitamente  [installare un certificato Let's Encrypt](/administer/admin_guide/domains/certificate). Questa guida descrive la procedura per installare un certificato, a pagamento, di una diversa autorità di certificazione (**Gandi**, **RapidSSL**, **StartSSL**, **Cacert**).
 :::
 
-Some changes have taken place which impact the procedures indicated below:
+Nel corso delle versioni, sono state introdotte delle modifiche che possono impattare sulle procedure descritte di seguito:
 
-- Metronome group is no longer used directly but ssl-cert.
-- A `/etc/yunohost/certs/DOMAIN.LTD-history/stamp` directory is used to keep each configuration created and a symlink is created.
+- Il gruppo metronome non è più utilizzato direttamente ma viene usato ssl-cert.
+- La directory `/etc/yunohost/certs/DOMAIN.LTD-history/stamp` viene utilizzata per salvare le configurazioni create e viene creato un link simbolico.
 
-### Adding a signed certificate by an authority (other than Let's Encrypt)
+### Installazione di un certificato firmato da un'autorità diversa da Let's Encrypt
 
-After the certificate creation with your registration authority, you must have a private key, the key file, and a public certificate, the crt file.
+Dopo aver creato il certificato presso l'autorità di certificazione scelta, sarete in possesso di una chiave privata, il file key e di un certificato pubblico, il file crt.
 
 :::warning
-Note that the key file is very sensitive, it is strictly personal and must be very well secured.
+Il file key contiene dati sensibili, è strettamente personale e deve essere conservato in un luogo sicuro.
 :::
 
-These two files should be copied to the server, if they are not already there.
+Questi due file devono essere copiati sul server.
 
 ```bash
-scp CERTIFICATE.crt admin@DOMAIN.TLD:ssl.crt
-scp KEY.key admin@DOMAIN.TLD:ssl.key
+scp CERTIFICAT.crt admin@DOMAIN.TLD:ssl.crt
+scp CLE.key admin@DOMAIN.TLD:ssl.key
 ```
 
-From Windows, scp can be used with Putty, by downloading the tool [pscp](http://the.earth.li/~sgtatham/putty/latest/x86/pscp.exe)
+Nelle versioni precedenti Windows 10, per utilizzare scp dovrete installare Putty e il plugin [pscp](http://the.earth.li/~sgtatham/putty/latest/x86/pscp.exe).
 
 ```bash
 pscp -P 22 CERTIFICATE.crt admin@DOMAIN.TLD:ssl.crt
 pscp -P 22 KEY.key admin@DOMAIN.TLD:ssl.key
 ```
 
-As soon as the files are on the server, the rest of the work will be done on it. In [ssh](/administer/admin_guide/command_line) or locally.
-First, create a folder to store the obtained certificates.
+Una volta copiati i file, i passi successivi si faranno sul server via [ssh](/administer/admin_guide/command_line) o in locale.
+Per prima cosa create una directory per salvare i certificati in vostro possesso.
 
 ```bash
 sudo mkdir /etc/yunohost/certs/DOMAIN.TLD/ae_certs
 sudo mv ssl.key ssl.crt /etc/yunohost/certs/DOMAIN.TLD/ae_certs/
 ```
 
-Then, go to the parent folder to continue.
+Spostatevi nella directory superiore
 
 ```bash
 cd /etc/yunohost/certs/DOMAIN.TLD/
 ```
 
-As a caution, back up the certificates of origin from YunoHost.
+Eseguite un backup dei certificati auto firmati di YunoHost.
 
 ```bash
 sudo mkdir yunohost_self_signed
 sudo mv *.pem *.cnf yunohost_self_signed/
 ```
 
-Depending on the registration authority, intermediate and root certificates must be obtained.
+Per alcune autorità di certificazione, è necessario ottenere di altri certificati (intermediate e root).
 
 #### StartSSL
 
@@ -82,25 +82,25 @@ sudo wget http://www.cacert.org/certs/root.crt -O ae_certs/ca.pem
 sudo wget http://www.cacert.org/certs/class3.crt -O ae_certs/intermediate_ca.pem
 ```
 
-Intermediate and root certificates must be combined with the obtained certificate to create a unified certificate chain.
+I certificati intermedi e root devono essere collegati con il certificato "principale" a creare una unica catena di certificati.
 
 ```bash
 cat ae_certs/ssl.crt ae_certs/intermediate_ca.pem ae_certs/ca.pem | sudo tee crt.pem
 ```
 
-The private key must be converted to `.pem` format.
+La chiave privata deve esser convertita nel formato `.pem`.
 
 ```bash
 sudo openssl rsa -in ae_certs/ssl.key -out key.pem -outform PEM
 ```
 
-To ensure the certificates syntax, check the files contents.
+Controllate la sintassi dei certificati, verificando il contenuto dei file.
 
 ```bash
 cat crt.pem key.pem
 ```
 
-The certificates and private key should look like this:
+I certificati e la chiave privata, devono assomigliare a questo:
 
 ```text
 -----BEGIN CERTIFICATE-----
@@ -120,25 +120,25 @@ kSK6OOauBHItgiGI7C87u4EJaHDvGIUxHxQQGsUM0SCIIVGK7Lwm+8e9I2X0G2GP
 -----END CERTIFICATE-----
 ```
 
-Finally, secure your certificate files.
+Infine mettete al sicuro i file del vostro certificato.
 
 ```bash
-sudo chown root:ssl-cert crt.pem key.pem
+sudo chown root:metronome crt.pem key.pem
 sudo chmod 640 crt.pem key.pem
 sudo chown root:root -R ae_certs
 sudo chmod 600 -R ae_certs
 ```
 
-Now the certificates (two files with the extension `.pem`) must be copied in `/etc/yunohost/certs/DOMAIN.TLD`.
+Adesso i certificati (i due files con estensione `.pem`) devono essere copiati in `/etc/yunohost/certs/DOMAIN.TLD`.
 
 ```bash
 cp ae_certs/*.pem ./
 ```
 
-Reload NGINX configuration to take into account the new certificate.
+Ricaricate la configurazione di NGINX per rendere effettive le modifiche effettuate.
 
 ```bash
 sudo service nginx reload
 ```
 
-Your certificate is ready. However, you can ensure that it is in place by testing the certificate using the [geocerts](https://www.geocerts.com/ssl_checker).
+Il certificato è pronto. Potete controllare la corretta configurazione e installazione utilizzando il servizio di [geocerts](https://www.geocerts.com/ssl_checker).
