--- a/i18n/it/docusaurus-plugin-content-docs/current/03.administer/45.tutorials/65.sftp_on_apps.md
+++ b/i18n/it/docusaurus-plugin-content-docs/current/03.administer/45.tutorials/65.sftp_on_apps.md
@@ -1,15 +1,15 @@
 ---
 sidebar_label: Access apps via SFTP
-title: Give SFTP permission to edit an app
+title: Concedere permessi SFTP per modificare un'applicazione
 ---
 
-In YunoHost permission management web admin interface, you can specify which user can access your system through SFTP.
+Nell'interfaccia di amministrazione web di YunoHost nella sezione gestione permessi potete specificare gli utenti che possono accedere al sistema via SFTP.
 
-However, those user are chrooted in their home directory for security reasons.
+D'altro canto questi utenti hanno un chroot nella loro home directory per ragioni di sicurezza.
 
-If you want to give access to a specific apps through SFTP, here are additional steps to do after giving the SFTP permission in the web interface.
+Se volete dare accesso a delle specifiche applicazioni attraverso SFTP sono necessari alcuni passaggi ulteriori dopo aver concesso i permessi SFTP nell'interfaccia di amministrazione via web.
 
-In instructions below, USER is the user to whom you wish to give permission to edit wordpress files.
+Nelle istruzioni qui sotto USER è l'utente al quale volete dare il permesso di modifica dei file di wordpress.
 
 ```bash
 mkdir -p /home/USER/apps/wordpress
