--- a/i18n/fr/docusaurus-plugin-content-docs/current/02.install/index.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/02.install/index.mdx
@@ -18,7 +18,7 @@ Un VPN est un tunnel chiffré entre deux machines. En pratique, cela permet de f
 
 ### Sur un serveur distant (VPS ou serveur dédié)
 
-Vous pouvez louer un serveur privé virtuel ou une machine dédiée à des hébergeurs [associatifs](https://db.ffdn.org/) ou [commerciaux](/providers/server).
+Vous pouvez louer un serveur privé virtuel ou une machine dédiée à des hébergeurs [associatifs](https://db.ffdn.org/) ou [commerciaux](/install/providers/servers).
 
 - **Avantages** : votre serveur sera rapide et la connectivité internet sera bonne ;
 - **Inconvénients** : il vous faudra payer des frais mensuels pour la machine, et vous n'aurez pas de contrôle physique dessus.
@@ -76,7 +76,7 @@ export const styleDanger = {
     </tr>
     <tr>
       <td style={styleNone}>Limitations FAI possibles</td>
-      <td style={styleDanger}>Oui<br/><small>(Voyez <Link to="./providers/isp">ici</Link>)</small></td>
+      <td style={styleDanger}>Oui<br/><small>(Voyez <Link to="/install/providers/isp/">ici</Link>)</small></td>
       <td style={styleGood}>Contournées par VPN</td>
       <td style={styleGood}>En général non</td>
     </tr>
