--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/45.tutorials/40.torhiddenservice.md
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/45.tutorials/40.torhiddenservice.md
@@ -1,22 +1,21 @@
 ---
 sidebar_label: Configure Tor Hidden Service
-title: Using YunoHost as a Tor Hidden Service
+title: Utiliser YunoHost comme un service caché Tor
 ---
 
 :::warning
-This tuto is not finished ! Some data could leak with this setup like the main domain of your YunoHost, so it's not a "Hidden Service".
-See [The official Tor hidden service documentation](https://www.torproject.org/docs/tor-hidden-service.html.en).
+Ce tuto n'est pas complet ! Des données peuvent être récupérées avec cette installation comme le nom de domaine principal de votre YunoHost, donc ce n'est pas un "service caché". Voir [The official Tor hidden service documentation](https://www.torproject.org/docs/tor-hidden-service.html.en) (anglais)
 :::
 
-###  Installing Tor
+### Installer Tor
 
 ```bash
 apt install tor 
 ```
 
-###  Configuring our hidden service
+###  Configurer notre service caché
 
-Edit `/etc/tor/torrc`, and add these lines:
+Éditer le fichier `/etc/tor/torrc`, et ajouter ces lignes :
 
 ```text
 HiddenServiceDir  /var/lib/tor/hidden_service/
@@ -24,36 +23,42 @@ HiddenServicePort 80 127.0.0.1:80
 HiddenServicePort 443 127.0.0.1:443
 ```
 
-###  Restart Tor
+### Redémarrer Tor
 
 ```bash
-service tor restart
+systemctl restart tor
 ```
 
-### Get your Tor Hidden Service hostname
+### Obtenir l’adresse du service caché
 
 ```bash
 cat /var/lib/tor/hidden_service/hostname
 ```
 
-Your domain looks like *random123456789.onion*
+Le nom de domaine ressemble à *random123456789.onion*
 
-### Add the .onion domain to YunoHost
+### Ajouter le domaine .onion à YunoHost
 
 ```bash
 yunohost domain add random123456789.onion
 ```
 
-### Avoid SSO redirection (optional)
+### Éviter la redirection vers le SSO (optionnel)
 
-If you want to avoid being redirected to the SSO portal at login, you can deactivate SSOwat for this specific tor domain, by editing the file `/etc/nginx/conf.d/random123456789.onion.conf` and commenting the following line (two times):
+Si vous voulez éviter d’être redirigé vers le portail à la connexion pour des raisons de traçabilité, vous pouvez désactiver SSOwat pour le domaine, en éditant le fichier `/etc/nginx/conf.d/random123456789.onion.conf` et en commentant la ligne suivante (elle apparaît deux fois dans le fichier) :
 
 ```text
 #access_by_lua_file /usr/share/ssowat/access.lua;
 ```
 
-### Restart NGINX
+### Vérifier que l'on a pas fait d'erreurs dans la configuration de NGINX
 
 ```bash
-service nginx restart
+nginx -t
+```
+
+### Si tout est OK on applique les modifications de la configuration
+
+```bash
+systemctl reload nginx
 ```
