--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/45.tutorials/45.certificate_custom.md
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/45.tutorials/45.certificate_custom.md
@@ -1,60 +1,61 @@
 ---
-title: Custom certificates
+title: Certificats personnalisés
 ---
 
 :::warning
-Since version 2.5, YunoHost integrates Let's Encrypt certificates automated management. You can easily and freely [install a Let's Encrypt certificate](/administer/admin_guide/domains/certificate). The following document describes the steps for installing a paid certificate from a certification authority (**Gandi**, **RapidSSL**, **StartSSL**, **Cacert**).
+Depuis la version 2.5, YunoHost intègre la gestion automatisée de certificats Let's Encrypt. Vous pouvez donc facilement et gratuitement [installer un certificat Let's Encrypt](/administer/admin_guide/domains/certificate). Le document suivant décrit la méthodologie pour installer un certificat, payant, d'une autre autorité de certification (**Gandi**, **RapidSSL**, **StartSSL**, **Cacert**).
 :::
 
-Some changes have taken place which impact the procedures indicated below:
+Quelques changements ont eu lieu qui impactent les procédures indiquées ci-dessous :
 
-- Metronome group is no longer used directly but ssl-cert.
-- A `/etc/yunohost/certs/DOMAIN.LTD-history/stamp` directory is used to keep each configuration created and a symlink is created.
+- Le groupe metronome n'est plus utilisé directement mais ssl-cert.
+- Un repertoire `/etc/yunohost/certs/DOMAIN.LTD-history/stamp` est utilisé pour conserver chaque configuration créée et un lien symbolique est créé dessus.
 
-### Adding a signed certificate by an authority (other than Let's Encrypt)
+### Ajout d’un certificat signé par une autorité (autre que Let's Encrypt)
 
-After the certificate creation with your registration authority, you must have a private key, the key file, and a public certificate, the crt file.
+Après création du certificat auprès de votre autorité d’enregistrement, vous devez être en possession d’une clé privée, le fichier *key* et d’un certificat public, le fichier *crt*.
 
 :::warning
-Note that the key file is very sensitive, it is strictly personal and must be very well secured.
+Attention, le fichier *key* est très sensible, il est strictement personnel et doit être très bien sécurisé.
 :::
 
-These two files should be copied to the server, if they are not already there.
+Ces deux fichiers doivent être copiés sur le serveur, s’ils ne s’y trouvent pas déjà.
 
 ```bash
-scp CERTIFICATE.crt admin@DOMAIN.TLD:ssl.crt
-scp KEY.key admin@DOMAIN.TLD:ssl.key
+scp CERTIFICAT.crt admin@DOMAIN.TLD:ssl.crt
+scp CLE.key admin@DOMAIN.TLD:ssl.key
 ```
 
-From Windows, scp can be used with Putty, by downloading the tool [pscp](http://the.earth.li/~sgtatham/putty/latest/x86/pscp.exe)
+Depuis Windows, scp est exploitable avec Putty, en téléchargeant l’outil [pscp](http://the.earth.li/~sgtatham/putty/latest/x86/pscp.exe)
 
 ```bash
-pscp -P 22 CERTIFICATE.crt admin@DOMAIN.TLD:ssl.crt
-pscp -P 22 KEY.key admin@DOMAIN.TLD:ssl.key
+pscp -P 22 CERTIFICAT.crt admin@DOMAIN.TLD:ssl.crt
+pscp -P 22 CLE.key admin@DOMAIN.TLD:ssl.key
 ```
 
-As soon as the files are on the server, the rest of the work will be done on it. In [ssh](/administer/admin_guide/command_line) or locally.
-First, create a folder to store the obtained certificates.
+Dès lors que les fichiers sont sur le serveur, le reste du travail se fera sur celui-ci. En [ssh](/administer/admin_guide/command_line) ou en local.
+
+Tout d’abord, créez un dossier pour stocker les certificats obtenus.
 
 ```bash
 sudo mkdir /etc/yunohost/certs/DOMAIN.TLD/ae_certs
 sudo mv ssl.key ssl.crt /etc/yunohost/certs/DOMAIN.TLD/ae_certs/
 ```
 
-Then, go to the parent folder to continue.
+Puis allez dans le dossier parent pour poursuivre.
 
 ```bash
 cd /etc/yunohost/certs/DOMAIN.TLD/
 ```
 
-As a caution, back up the certificates of origin from YunoHost.
+Faites une sauvegarde des certificats d’origine de YunoHost, par précaution.
 
 ```bash
 sudo mkdir yunohost_self_signed
 sudo mv *.pem *.cnf yunohost_self_signed/
 ```
 
-Depending on the registration authority, intermediate and root certificates must be obtained.
+En fonction de l’autorité d’enregistrement, des certificats intermédiaires et racines doivent être obtenus.
 
 #### StartSSL
 
@@ -82,25 +83,25 @@ sudo wget http://www.cacert.org/certs/root.crt -O ae_certs/ca.pem
 sudo wget http://www.cacert.org/certs/class3.crt -O ae_certs/intermediate_ca.pem
 ```
 
-Intermediate and root certificates must be combined with the obtained certificate to create a unified certificate chain.
+Les certificats intermédiaires et root doivent être réunis avec le certificat obtenu pour créer une chaîne de certificats unifiés.
 
 ```bash
 cat ae_certs/ssl.crt ae_certs/intermediate_ca.pem ae_certs/ca.pem | sudo tee crt.pem
 ```
 
-The private key must be converted to `.pem` format.
+La clé privée doit être, elle, convertie au format `.pem`.
 
 ```bash
 sudo openssl rsa -in ae_certs/ssl.key -out key.pem -outform PEM
 ```
 
-To ensure the certificates syntax, check the files contents.
+Afin de s’assurer de la syntaxe des certificats, vérifiez le contenu des fichiers.
 
 ```bash
 cat crt.pem key.pem
 ```
 
-The certificates and private key should look like this:
+Les certificats et la clé privée doivent ressembler à cela :
 
 ```text
 -----BEGIN CERTIFICATE-----
@@ -120,25 +121,25 @@ kSK6OOauBHItgiGI7C87u4EJaHDvGIUxHxQQGsUM0SCIIVGK7Lwm+8e9I2X0G2GP
 -----END CERTIFICATE-----
 ```
 
-Finally, secure your certificate files.
+Enfin, sécurisez les fichiers de votre certificat.
 
 ```bash
-sudo chown root:ssl-cert crt.pem key.pem
+sudo chown root:metronome crt.pem key.pem
 sudo chmod 640 crt.pem key.pem
 sudo chown root:root -R ae_certs
 sudo chmod 600 -R ae_certs
 ```
 
-Now the certificates (two files with the extension `.pem`) must be copied in `/etc/yunohost/certs/DOMAIN.TLD`.
+Maintenant les certificats (les deux fichiers avec l'extension `.pem`) doivent être recopiés dans `/etc/yunohost/certs/DOMAIN.TLD`.
 
 ```bash
 cp ae_certs/*.pem ./
 ```
 
-Reload NGINX configuration to take into account the new certificate.
+Rechargez la configuration de NGINX pour prendre en compte le nouveau certificat.
 
 ```bash
 sudo service nginx reload
 ```
 
-Your certificate is ready. However, you can ensure that it is in place by testing the certificate using the [geocerts](https://www.geocerts.com/ssl_checker).
+Votre certificat est prêt à servir. Vous pouvez toutefois vous assurer de sa mise en place en testant le certificat à l’aide du service de [geocerts](https://www.geocerts.com/ssl_checker).
