--- a/i18n/it/docusaurus-plugin-content-docs/current/03.administer/45.tutorials/40.torhiddenservice.md
+++ b/i18n/it/docusaurus-plugin-content-docs/current/03.administer/45.tutorials/40.torhiddenservice.md
@@ -1,22 +1,21 @@
 ---
 sidebar_label: Configure Tor Hidden Service
-title: Using YunoHost as a Tor Hidden Service
+title: Collegarsi a YunoHost attraverso un Hidden Service
 ---
 
 :::warning
-This tuto is not finished ! Some data could leak with this setup like the main domain of your YunoHost, so it's not a "Hidden Service".
-See [The official Tor hidden service documentation](https://www.torproject.org/docs/tor-hidden-service.html.en).
+Questo tutorial non è completo! Con queste impostazioni alcuni dati possono essere rivelati come ad esempio il dominio principale del tuo YunoHost, di conseguenza non può essere considerato un reale "Hidden service". Vedi [The official Tor hidden service documentation](https://www.torproject.org/docs/tor-hidden-service.html.en).
 :::
 
-###  Installing Tor
+### Installare Tor
 
 ```bash
 apt install tor 
 ```
 
-###  Configuring our hidden service
+### Configurazione dell'hidden service
 
-Edit `/etc/tor/torrc`, and add these lines:
+Modifica `/etc/tor/torrc` aggiungendo queste righe:
 
 ```text
 HiddenServiceDir  /var/lib/tor/hidden_service/
@@ -24,35 +23,35 @@ HiddenServicePort 80 127.0.0.1:80
 HiddenServicePort 443 127.0.0.1:443
 ```
 
-###  Restart Tor
+### Riavvia Tor
 
 ```bash
 service tor restart
 ```
 
-### Get your Tor Hidden Service hostname
+### Copia l'hostname del tuo Hidden Service
 
 ```bash
 cat /var/lib/tor/hidden_service/hostname
 ```
 
-Your domain looks like *random123456789.onion*
+Il dominio dell'hidden service sarà una cosa tipo *random123456789.onion*
 
-### Add the .onion domain to YunoHost
+### Aggiungi il dominio .onion a YunoHost
 
 ```bash
 yunohost domain add random123456789.onion
 ```
 
-### Avoid SSO redirection (optional)
+### Disabilita la redirezione SSO (opzionale)
 
-If you want to avoid being redirected to the SSO portal at login, you can deactivate SSOwat for this specific tor domain, by editing the file `/etc/nginx/conf.d/random123456789.onion.conf` and commenting the following line (two times):
+Se non vuoi essere rediretto al portale SSO al login puoi disattivare SSOwat specificatamente per questo dominio modificando il file `/etc/nginx/conf.d/random123456789.onion.conf` commentando le seguenti linee (due volte):
 
 ```text
 #access_by_lua_file /usr/share/ssowat/access.lua;
 ```
 
-### Restart NGINX
+### Riavvia NGINX
 
 ```bash
 service nginx restart
