--- a/i18n/it/docusaurus-plugin-content-docs/current/03.administer/45.tutorials/55.moving_app_folder.md
+++ b/i18n/it/docusaurus-plugin-content-docs/current/03.administer/45.tutorials/55.moving_app_folder.md
@@ -1,37 +1,35 @@
 ---
 sidebar_label: Move apps storage
-title: Moving an app folder to a different storage
+title: Spostare la cartella di un'applicazione in una nuova collocazione
 ---
 
-Applications folder are (*usually*) located in `/var/www/$appname`
+Le cartelle dei programmi si trovano (*normalmente*) in `/var/www/$nome_programma`
 
-If an application folder is expected to get bigger because of the amount of data it contains, it might be relevant to move it to another storage (like an external hard drive).
+Quando la cartella di una applicazione diventa molto voluminosa, potrebbe essere utile spostarla in una diversa collocazione (HD esterno, scheda sd, ecc).
 
-Here's a summary of how to do this the application wordpress. Here, is is assumed that
-[you already mounted the external hard-drive](/administer/tutorials/external_storage).
+Di seguito la guida per spostare la cartelle del programma wordpress. Si presuppone che il [dispositivo esterno sia già montato](/administer/tutorials/external_storage)
 
-#### 1. Move the entire wordpress folder to an external hard drive
+#### 1. Spostare la cartella wordpress e tutto il suo contenuto nella destinazione finale
 
 ```bash
 mv /var/www/wordpress /media/externalharddrive/
 ```
 
-#### 2. Create a symbolic link
+#### 2. Creare un link simbolico
 
-So that programs looking for files in /var/www/wordpress will actually take them from the harddrive
+I programmi che dovranno accedere alla cartella /var/www/wordpress saranno reindirizzati verso il disco esterno
 
 ```bash
 ln -s /media/externalharddrive/wordpress /var/www/wordpress
 ```
 
-#### 3. Tweak permissions (maybe?)
+#### 3. Riconfigurare i permessi (non è sicuro che serva)
 
-After this, note that you may need to tweak the permissions of `/media/externalharddrive` so that `www-data` (or the user corresponding to the app) is able to read through the folder... Something like :
+Potrebbe rendersi necessario modificare i permessi della destinazione finale `/media/externalharddrive` affinché `www-data` (o l'utente dell'applicazione) possa accederci... Esempio non esaustivo:
 
 ```bash
 chgrp www-data /media/externalharddrive
 chmod g+rx /media/externalharddrive
 ```
 
-(but it depends on your exact setup... Please update this doc page if you figure
-out what to do exactly)
+(tutto dipende dal vostro setup... Nel caso siete pregati di aggiornare questa pagina di documentazione indicando quello che avete fatto in concreto)
