reuse translations: fail2ban

--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/50.troubleshooting/index.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/50.troubleshooting/index.mdx
@@ -1,7 +1,7 @@
 ---
-title: Troubleshooting
+title: Dépannage
 ---
 
-This section contains specific tips to troubleshoot common issues.
+Cette section contiens des informations pour régler des problèmes courants.
 
-If you are looking for help, consider having a look at [the forum](https://forum.yunohost.org/), [the support chat room](/community/chat_rooms), [the 'Help' page](/community/help) and [how to ask for help efficiently](/community/asking_for_help_efficiently)
+Si vous cherchez de l'aide, jetez un oeil au [forum](https://forum.yunohost.org/), au [salon de support](/community/chat_rooms), la [page d'aide](/community/help) et [comment demander de l'aide efficacement](/community/asking_for_help_efficiently)
