--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/_category_.yaml
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/_category_.yaml
@@ -1,5 +1,5 @@
 label: Administration guide
 link:
   type: generated-index
-  title: Administration guide
-  description: Learn about self-hosting, how to install and use YunoHost
+  title: Guide d’administration
+  description: Découvrez l’auto-hébergement, comment installer et utiliser YunoHost
