--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/50.troubleshooting/05.fail2ban.md
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/50.troubleshooting/05.fail2ban.md
@@ -1,16 +1,16 @@
 ---
-title: IP address unban
+title: Débannir une adresse IP
 ---
 
-**Fail2Ban** is an intrusion prevention software that protects computer servers against brute-force attacks. It monitors certain logs and will ban IP addresses that show brute-force-like behavior.
+**Fail2Ban** est un logiciel de prévention des intrusions qui protège les serveurs informatiques contre les attaques de brute-force. Il surveille certains journaux et bannira les adresses IP qui montrent un comportement de brute-forcing.
 
-In particular, **Fail2Ban** monitors `SSH` connection attempts. After 5 failed SSH connection attempts, Fail2Ban will ban the IP address from connecting via SSH for 10 minutes. If this address fails several times, it might get banned for a week.
+En particulier, **Fail2Ban** surveille les tentatives de connexion `SSH`. Après 5 tentatives de connexion échouées sur SSH, Fail2Ban banniera l’adresse IP pendant 10 minutes. Si cette adresse récidive plusieurs fois, elle peut être bannie pendant une semaine.
 
-## Unban an IP address
+## Débannir une adresse IP
 
-To unblock an IP address, you must first access your server by some means (for example from another IP address or from another internet connection than the banned one).
+Pour débloquer une adresse IP, vous devez d’abord accéder à votre serveur par un moyen quelconque (par exemple à partir d’une autre adresse IP ou d’une autre connexion internet que celle bannie).
 
-Then, look at the **Fail2Ban’s log** to identify in which `jail` the IP address has been banned:
+Ensuite, regardez le **journal de Fail2Ban** pour identifier dans quelle `prison` ou `jail` l’adresse IP a été bannie :
 
 ```bash
 sudo tail /var/log/fail2ban.log
@@ -23,45 +23,45 @@ sudo tail /var/log/fail2ban.log
 2019-01-07 16:24:57 fail2ban.filter  [1837]: NOTICE  [recidive] Ban 11.22.33.44
 ```
 
-Here, the `11.22.33.44` IP address has been banned in the `sshd` and `recidive` jails.
+Ici, l’adresse IP `11.22.33.44` a été bannie dans les jails `sshd` et `recidive`.
 
-Then deban the IP address with the following commands:
+Puis débanissez l’adresse IP avec les commandes suivantes :
 
 ```bash
 sudo fail2ban-client set sshd unbanip 11.22.33.44
 sudo fail2ban-client set recidive unbanip 11.22.33.44
 ```
 
-## Whitelist an IP address
+## Passer une adresse IP en liste blanche / whitelist
 
-If you don’t want a "legitimate" IP address to be blocked by **YunoHost** anymore, then you have to fill it in the whitelist of the `jail` configuration file.
+Si vous ne voulez plus qu’une adresse IP « légitime » soit bloquée par **YunoHost**, alors il faut la renseigner dans la liste blanche ou whitelist du fichier de configuration de la `prison`.
 
-When updating the **Fail2Ban** software, the original `/etc/fail2ban/jail.conf` file is overwritten. So it is on a new dedicated file that we will store the changes. They will thus be preserved over time.
+Lors d’une mise à jour du logiciel **Fail2Ban**, le fichier d’origine `/etc/fail2ban/jail.conf` est écrasé. C’est donc dans un nouveau fichier que nous allons stocker les modifications. Elles seront ainsi conservées dans le temps.
 
-1. Start by creating the new jail configuration file which will be called `yunohost-whitelist.conf`:
+1. Commencez par créer le nouveau fichier de configuration des prisons qui s’appelera `yunohost-whitelist.conf` :
 
     ```bash
     sudo touch /etc/fail2ban/jail.d/yunohost-whitelist.conf
     ```
 
-2. Edit this new file with your favorite editor:
+2. Éditez ce nouveau fichier avec votre éditeur préféré :
 
     ```bash
     sudo nano /etc/fail2ban/jail.d/yunohost-whitelist.conf
     ```
 
-3. Paste the following content into the file and adapt the IP address `XXX.XXX.XXX.XXX`:
+3. Coller le contenu suivant dans le fichier et adapter l’adresse IP `XXX.XXX.XXX.XXX` :
 
     ```bash
     [DEFAULT]
 
-    ignoreip = 127.0.0.1/8 XXX.XXX.XXX.XXX #<= the IP address (you can put more than one, separated by a space) that you want to whitelist
+    ignoreip = 127.0.0.1/8 XXX.XXX.XXX.XXX #<= l'adresse IP (on peut en mettre plusieurs, séparées par un espace) que vous voulez passer en liste blanche / whitelist
     ```
 
-4. Save the file and reload the Fail2Ban configuration:
+4. Sauvegardez le fichier et rechargez la configuration de Fail2Ban :
 
     ```bash
     sudo fail2ban-client reload
     ```
 
-Congratulations, no more risks of banning yourself from your own YunoHost server!
+Félicitations, plus de risques de se bannir de son propre serveur YunoHost !
