--- a/i18n/it/docusaurus-plugin-content-docs/current/03.administer/50.troubleshooting/05.fail2ban.md
+++ b/i18n/it/docusaurus-plugin-content-docs/current/03.administer/50.troubleshooting/05.fail2ban.md
@@ -1,16 +1,16 @@
 ---
-title: IP address unban
+title: Sbannare un indirizzo IP
 ---
 
-**Fail2Ban** is an intrusion prevention software that protects computer servers against brute-force attacks. It monitors certain logs and will ban IP addresses that show brute-force-like behavior.
+**Fail2Ban** è un programma di prevenzione delle intrusioni che protegge i server contro gli attacchi di forza bruta (brute-force), controllando alcuni log e bannando (cioè impedendo ulteriori connessioni) gli indirizzi IP che mostrano questo tipo di comportamento.
 
-In particular, **Fail2Ban** monitors `SSH` connection attempts. After 5 failed SSH connection attempts, Fail2Ban will ban the IP address from connecting via SSH for 10 minutes. If this address fails several times, it might get banned for a week.
+In particolare, **Fail2Ban** controlla tentativi di connessione su `SSH`. Dopo cinque tentativi di connessione falliti, Fail2Ban banna l'indirizzo IP impedendogli la connessione SSH per 10 minuti. Se la cosa si ripete altre volte viene bannato per una settimana.
 
-## Unban an IP address
+## Togliere il ban ad un indirizzo
 
-To unblock an IP address, you must first access your server by some means (for example from another IP address or from another internet connection than the banned one).
+Per sbloccare un indirizzo è necessario innanzitutto accedere al server con qualche mezzo (ad esempio da un altro indirizzo IP o da un'altra connessione diversa da quella bannata).
 
-Then, look at the **Fail2Ban’s log** to identify in which `jail` the IP address has been banned:
+Dopo di che controlla il **log di Fail2Ban** per trovare in quale `jail` è stato bannato l'indirizzo IP:
 
 ```bash
 sudo tail /var/log/fail2ban.log
@@ -23,34 +23,34 @@ sudo tail /var/log/fail2ban.log
 2019-01-07 16:24:57 fail2ban.filter  [1837]: NOTICE  [recidive] Ban 11.22.33.44
 ```
 
-Here, the `11.22.33.44` IP address has been banned in the `sshd` and `recidive` jails.
+In questo esempio l'indirizzo `11.22.33.44` è stato bannato nel `jail` `sshd` e `recidive`.
 
-Then deban the IP address with the following commands:
+Quindi togli il ban con il seguente comando:
 
 ```bash
 sudo fail2ban-client set sshd unbanip 11.22.33.44
 sudo fail2ban-client set recidive unbanip 11.22.33.44
 ```
 
-## Whitelist an IP address
+## Aggiungere un indirizzo IP alla whitelist
 
-If you don’t want a "legitimate" IP address to be blocked by **YunoHost** anymore, then you have to fill it in the whitelist of the `jail` configuration file.
+Se vuoi impedire che un indirizzo IP "legittimo" venga bloccato da **YunoHost** ancora devi compilare la whitelist del file di configurazione della `jail`.
 
-When updating the **Fail2Ban** software, the original `/etc/fail2ban/jail.conf` file is overwritten. So it is on a new dedicated file that we will store the changes. They will thus be preserved over time.
+Aggiornando **Fail2Ban** il file `/etc/fail2ban/jail.conf` originale verrà sovrascritto quindi dovremo scrivere questi cambiamenti su un nuovo file che verrà mantenuto.
 
-1. Start by creating the new jail configuration file which will be called `yunohost-whitelist.conf`:
+1. Comincia creando un nuovo file di configurazione della jail che verrà chiamato `yunohost-whitelist.conf`:
 
     ```bash
     sudo touch /etc/fail2ban/jail.d/yunohost-whitelist.conf
     ```
 
-2. Edit this new file with your favorite editor:
+2. Modifica questo nuovo file con il tuo editor preferito (in questo esempio viene usato `nano`):
 
     ```bash
     sudo nano /etc/fail2ban/jail.d/yunohost-whitelist.conf
     ```
 
-3. Paste the following content into the file and adapt the IP address `XXX.XXX.XXX.XXX`:
+3. Incolla il seguente testo nel file cambiando l'indirizzo IP `XXX.XXX.XXX.XXX`:
 
     ```bash
     [DEFAULT]
@@ -58,10 +58,10 @@ When updating the **Fail2Ban** software, the original `/etc/fail2ban/jail.conf` 
     ignoreip = 127.0.0.1/8 XXX.XXX.XXX.XXX #<= the IP address (you can put more than one, separated by a space) that you want to whitelist
     ```
 
-4. Save the file and reload the Fail2Ban configuration:
+4. Salva il file e ricarica la configurazione di Fail2Ban:
 
     ```bash
     sudo fail2ban-client reload
     ```
 
-Congratulations, no more risks of banning yourself from your own YunoHost server!
+Congratulazioni, non corrererai più il rischio di essere bannato dal tuo server YunoHost!
